myCompiler/SourceCode/y.output
   0  $accept : st $end

   1  st : rtype NAME LP RP LC list RC
   2     | rtype NAME RP LP LC list RC

   3  rtype : VOID
   4        | INT
   5        | CHAR
   6        |

   7  list : stmt A

   8  A : stmt A
   9    |

  10  stmt : Datatype VList SEMI
  11       | SEMI
  12       | IF LP expr RP stmt
  13       | IF LP expr RP stmt ELSE stmt
  14       | WHILE LP expr RP stmt
  15       | LC list RC
  16       | expr SEMI
  17       | Datatype VList
  18       | IF expr RP stmt
  19       | IF LP expr stmt
  20       | IF expr RP stmt
  21       | IF LP expr stmt
  22       | error ';'

  23  Datatype : CHAR
  24           | SHORT
  25           | INT
  26           | FLOAT
  27           | LONG
  28           | DOUBLE
  29           | error ';'

  30  VList : DecAs B

  31  DecAs : NAME EQUAL ICON
  32        | NAME EQUAL MINUS ICON
  33        | NAME EQUAL EQUAL ICON
  34        | NAME
  35        | NAME EQUAL
  36        | error ';'

  37  B : COMMA DecAs B
  38    | DecAs B
  39    |
  40    | error ';'

  41  expr : NAME EQUAL expr
  42       | logic
  43       |

  44  logic : logic OR logic
  45        | logic AND logic
  46        | logic OROR logic
  47        | logic ANDAND logic
  48        | rel

  49  rel : relA RELOP relB
  50      | relA EQUOP relB
  51      | bin

  52  relA : relB

  53  relB : bin

  54  bin : bin PLUS binterm
  55      | bin MINUS binterm
  56      | binterm

  57  binterm : binterm STAR binfact
  58          | binterm DIVOP binfact
  59          | binfact

  60  binfact : LP bin RP
  61          | MINUS binfact
  62          | NAME
  63          | ICON

  64  NAME : IDEN

state 0
	$accept : . st $end  (0)
	rtype : .  (6)

	CHAR  shift 1
	INT  shift 2
	VOID  shift 3
	IDEN  reduce 6

	st  goto 4
	rtype  goto 5


state 1
	rtype : CHAR .  (5)

	.  reduce 5


state 2
	rtype : INT .  (4)

	.  reduce 4


state 3
	rtype : VOID .  (3)

	.  reduce 3


state 4
	$accept : st . $end  (0)

	$end  accept


state 5
	st : rtype . NAME LP RP LC list RC  (1)
	st : rtype . NAME RP LP LC list RC  (2)

	IDEN  shift 6
	.  error

	NAME  goto 7


state 6
	NAME : IDEN .  (64)

	.  reduce 64


state 7
	st : rtype NAME . LP RP LC list RC  (1)
	st : rtype NAME . RP LP LC list RC  (2)

	LP  shift 8
	RP  shift 9
	.  error


state 8
	st : rtype NAME LP . RP LC list RC  (1)

	RP  shift 10
	.  error


state 9
	st : rtype NAME RP . LP LC list RC  (2)

	LP  shift 11
	.  error


state 10
	st : rtype NAME LP RP . LC list RC  (1)

	LC  shift 12
	.  error


state 11
	st : rtype NAME RP LP . LC list RC  (2)

	LC  shift 13
	.  error


12: shift/reduce conflict (shift 22, reduce 43) on SEMI
state 12
	st : rtype NAME LP RP LC . list RC  (1)
	expr : .  (43)

	error  shift 14
	CHAR  shift 15
	SHORT  shift 16
	INT  shift 17
	FLOAT  shift 18
	LONG  shift 19
	DOUBLE  shift 20
	IDEN  shift 6
	ICON  shift 21
	SEMI  shift 22
	LC  shift 23
	LP  shift 24
	IF  shift 25
	WHILE  shift 26
	MINUS  shift 27

	NAME  goto 28
	list  goto 29
	stmt  goto 30
	Datatype  goto 31
	expr  goto 32
	logic  goto 33
	rel  goto 34
	relA  goto 35
	relB  goto 36
	bin  goto 37
	binterm  goto 38
	binfact  goto 39


13: shift/reduce conflict (shift 22, reduce 43) on SEMI
state 13
	st : rtype NAME RP LP LC . list RC  (2)
	expr : .  (43)

	error  shift 14
	CHAR  shift 15
	SHORT  shift 16
	INT  shift 17
	FLOAT  shift 18
	LONG  shift 19
	DOUBLE  shift 20
	IDEN  shift 6
	ICON  shift 21
	SEMI  shift 22
	LC  shift 23
	LP  shift 24
	IF  shift 25
	WHILE  shift 26
	MINUS  shift 27

	NAME  goto 28
	list  goto 40
	stmt  goto 30
	Datatype  goto 31
	expr  goto 32
	logic  goto 33
	rel  goto 34
	relA  goto 35
	relB  goto 36
	bin  goto 37
	binterm  goto 38
	binfact  goto 39


state 14
	stmt : error . ';'  (22)
	Datatype : error . ';'  (29)

	';'  shift 41
	.  error


state 15
	Datatype : CHAR .  (23)

	.  reduce 23


state 16
	Datatype : SHORT .  (24)

	.  reduce 24


state 17
	Datatype : INT .  (25)

	.  reduce 25


state 18
	Datatype : FLOAT .  (26)

	.  reduce 26


state 19
	Datatype : LONG .  (27)

	.  reduce 27


state 20
	Datatype : DOUBLE .  (28)

	.  reduce 28


state 21
	binfact : ICON .  (63)

	.  reduce 63


state 22
	stmt : SEMI .  (11)

	.  reduce 11


23: shift/reduce conflict (shift 22, reduce 43) on SEMI
state 23
	stmt : LC . list RC  (15)
	expr : .  (43)

	error  shift 14
	CHAR  shift 15
	SHORT  shift 16
	INT  shift 17
	FLOAT  shift 18
	LONG  shift 19
	DOUBLE  shift 20
	IDEN  shift 6
	ICON  shift 21
	SEMI  shift 22
	LC  shift 23
	LP  shift 24
	IF  shift 25
	WHILE  shift 26
	MINUS  shift 27

	NAME  goto 28
	list  goto 42
	stmt  goto 30
	Datatype  goto 31
	expr  goto 32
	logic  goto 33
	rel  goto 34
	relA  goto 35
	relB  goto 36
	bin  goto 37
	binterm  goto 38
	binfact  goto 39


state 24
	binfact : LP . bin RP  (60)

	IDEN  shift 6
	ICON  shift 21
	LP  shift 24
	MINUS  shift 27
	.  error

	NAME  goto 43
	bin  goto 44
	binterm  goto 38
	binfact  goto 39


state 25
	stmt : IF . LP expr RP stmt  (12)
	stmt : IF . LP expr RP stmt ELSE stmt  (13)
	stmt : IF . expr RP stmt  (18)
	stmt : IF . LP expr stmt  (19)
	stmt : IF . expr RP stmt  (20)
	stmt : IF . LP expr stmt  (21)
	expr : .  (43)

	IDEN  shift 6
	ICON  shift 21
	LP  shift 45
	MINUS  shift 27
	RP  reduce 43

	NAME  goto 28
	expr  goto 46
	logic  goto 33
	rel  goto 34
	relA  goto 35
	relB  goto 36
	bin  goto 37
	binterm  goto 38
	binfact  goto 39


state 26
	stmt : WHILE . LP expr RP stmt  (14)

	LP  shift 47
	.  error


state 27
	binfact : MINUS . binfact  (61)

	IDEN  shift 6
	ICON  shift 21
	LP  shift 24
	MINUS  shift 27
	.  error

	NAME  goto 43
	binfact  goto 48


state 28
	expr : NAME . EQUAL expr  (41)
	binfact : NAME .  (62)

	EQUAL  shift 49
	error  reduce 62
	CHAR  reduce 62
	SHORT  reduce 62
	INT  reduce 62
	FLOAT  reduce 62
	LONG  reduce 62
	DOUBLE  reduce 62
	IDEN  reduce 62
	ICON  reduce 62
	SEMI  reduce 62
	LC  reduce 62
	LP  reduce 62
	RP  reduce 62
	IF  reduce 62
	WHILE  reduce 62
	RELOP  reduce 62
	EQUOP  reduce 62
	OR  reduce 62
	AND  reduce 62
	OROR  reduce 62
	ANDAND  reduce 62
	PLUS  reduce 62
	MINUS  reduce 62
	STAR  reduce 62
	DIVOP  reduce 62


state 29
	st : rtype NAME LP RP LC list . RC  (1)

	RC  shift 50
	.  error


30: shift/reduce conflict (shift 22, reduce 43) on SEMI
state 30
	list : stmt . A  (7)
	A : .  (9)
	expr : .  (43)

	error  shift 14
	CHAR  shift 15
	SHORT  shift 16
	INT  shift 17
	FLOAT  shift 18
	LONG  shift 19
	DOUBLE  shift 20
	IDEN  shift 6
	ICON  shift 21
	SEMI  shift 22
	LC  shift 23
	LP  shift 24
	IF  shift 25
	WHILE  shift 26
	MINUS  shift 27
	RC  reduce 9

	NAME  goto 28
	stmt  goto 51
	A  goto 52
	Datatype  goto 31
	expr  goto 32
	logic  goto 33
	rel  goto 34
	relA  goto 35
	relB  goto 36
	bin  goto 37
	binterm  goto 38
	binfact  goto 39


state 31
	stmt : Datatype . VList SEMI  (10)
	stmt : Datatype . VList  (17)

	error  shift 53
	IDEN  shift 6
	.  error

	NAME  goto 54
	VList  goto 55
	DecAs  goto 56


state 32
	stmt : expr . SEMI  (16)

	SEMI  shift 57
	.  error


state 33
	expr : logic .  (42)
	logic : logic . OR logic  (44)
	logic : logic . AND logic  (45)
	logic : logic . OROR logic  (46)
	logic : logic . ANDAND logic  (47)

	OR  shift 58
	AND  shift 59
	OROR  shift 60
	ANDAND  shift 61
	error  reduce 42
	CHAR  reduce 42
	SHORT  reduce 42
	INT  reduce 42
	FLOAT  reduce 42
	LONG  reduce 42
	DOUBLE  reduce 42
	IDEN  reduce 42
	ICON  reduce 42
	SEMI  reduce 42
	LC  reduce 42
	LP  reduce 42
	RP  reduce 42
	IF  reduce 42
	WHILE  reduce 42
	MINUS  reduce 42


state 34
	logic : rel .  (48)

	.  reduce 48


state 35
	rel : relA . RELOP relB  (49)
	rel : relA . EQUOP relB  (50)

	RELOP  shift 62
	EQUOP  shift 63
	.  error


state 36
	relA : relB .  (52)

	.  reduce 52


37: shift/reduce conflict (shift 65, reduce 51) on MINUS
state 37
	rel : bin .  (51)
	relB : bin .  (53)
	bin : bin . PLUS binterm  (54)
	bin : bin . MINUS binterm  (55)

	PLUS  shift 64
	MINUS  shift 65
	error  reduce 51
	CHAR  reduce 51
	SHORT  reduce 51
	INT  reduce 51
	FLOAT  reduce 51
	LONG  reduce 51
	DOUBLE  reduce 51
	IDEN  reduce 51
	ICON  reduce 51
	SEMI  reduce 51
	LC  reduce 51
	LP  reduce 51
	RP  reduce 51
	IF  reduce 51
	WHILE  reduce 51
	RELOP  reduce 53
	EQUOP  reduce 53
	OR  reduce 51
	AND  reduce 51
	OROR  reduce 51
	ANDAND  reduce 51


state 38
	bin : binterm .  (56)
	binterm : binterm . STAR binfact  (57)
	binterm : binterm . DIVOP binfact  (58)

	STAR  shift 66
	DIVOP  shift 67
	error  reduce 56
	CHAR  reduce 56
	SHORT  reduce 56
	INT  reduce 56
	FLOAT  reduce 56
	LONG  reduce 56
	DOUBLE  reduce 56
	IDEN  reduce 56
	ICON  reduce 56
	SEMI  reduce 56
	LC  reduce 56
	LP  reduce 56
	RP  reduce 56
	IF  reduce 56
	WHILE  reduce 56
	RELOP  reduce 56
	EQUOP  reduce 56
	OR  reduce 56
	AND  reduce 56
	OROR  reduce 56
	ANDAND  reduce 56
	PLUS  reduce 56
	MINUS  reduce 56


state 39
	binterm : binfact .  (59)

	.  reduce 59


state 40
	st : rtype NAME RP LP LC list . RC  (2)

	RC  shift 68
	.  error


41: reduce/reduce conflict (reduce 22, reduce 29) on error
41: reduce/reduce conflict (reduce 22, reduce 29) on IDEN
state 41
	stmt : error ';' .  (22)
	Datatype : error ';' .  (29)

	.  reduce 22


state 42
	stmt : LC list . RC  (15)

	RC  shift 69
	.  error


state 43
	binfact : NAME .  (62)

	.  reduce 62


state 44
	bin : bin . PLUS binterm  (54)
	bin : bin . MINUS binterm  (55)
	binfact : LP bin . RP  (60)

	RP  shift 70
	PLUS  shift 64
	MINUS  shift 65
	.  error


45: shift/reduce conflict (shift 6, reduce 43) on IDEN
45: shift/reduce conflict (shift 21, reduce 43) on ICON
45: shift/reduce conflict (shift 24, reduce 43) on LP
45: shift/reduce conflict (shift 27, reduce 43) on MINUS
state 45
	stmt : IF LP . expr RP stmt  (12)
	stmt : IF LP . expr RP stmt ELSE stmt  (13)
	stmt : IF LP . expr stmt  (19)
	stmt : IF LP . expr stmt  (21)
	binfact : LP . bin RP  (60)
	expr : .  (43)

	IDEN  shift 6
	ICON  shift 21
	LP  shift 24
	MINUS  shift 27
	error  reduce 43
	CHAR  reduce 43
	SHORT  reduce 43
	INT  reduce 43
	FLOAT  reduce 43
	LONG  reduce 43
	DOUBLE  reduce 43
	SEMI  reduce 43
	LC  reduce 43
	RP  reduce 43
	IF  reduce 43
	WHILE  reduce 43

	NAME  goto 28
	expr  goto 71
	logic  goto 33
	rel  goto 34
	relA  goto 35
	relB  goto 36
	bin  goto 72
	binterm  goto 38
	binfact  goto 39


state 46
	stmt : IF expr . RP stmt  (18)
	stmt : IF expr . RP stmt  (20)

	RP  shift 73
	.  error


state 47
	stmt : WHILE LP . expr RP stmt  (14)
	expr : .  (43)

	IDEN  shift 6
	ICON  shift 21
	LP  shift 24
	MINUS  shift 27
	RP  reduce 43

	NAME  goto 28
	expr  goto 74
	logic  goto 33
	rel  goto 34
	relA  goto 35
	relB  goto 36
	bin  goto 37
	binterm  goto 38
	binfact  goto 39


state 48
	binfact : MINUS binfact .  (61)

	.  reduce 61


49: shift/reduce conflict (shift 6, reduce 43) on IDEN
49: shift/reduce conflict (shift 21, reduce 43) on ICON
49: shift/reduce conflict (shift 24, reduce 43) on LP
49: shift/reduce conflict (shift 27, reduce 43) on MINUS
state 49
	expr : NAME EQUAL . expr  (41)
	expr : .  (43)

	IDEN  shift 6
	ICON  shift 21
	LP  shift 24
	MINUS  shift 27
	error  reduce 43
	CHAR  reduce 43
	SHORT  reduce 43
	INT  reduce 43
	FLOAT  reduce 43
	LONG  reduce 43
	DOUBLE  reduce 43
	SEMI  reduce 43
	LC  reduce 43
	RP  reduce 43
	IF  reduce 43
	WHILE  reduce 43

	NAME  goto 28
	expr  goto 75
	logic  goto 33
	rel  goto 34
	relA  goto 35
	relB  goto 36
	bin  goto 37
	binterm  goto 38
	binfact  goto 39


state 50
	st : rtype NAME LP RP LC list RC .  (1)

	.  reduce 1


51: shift/reduce conflict (shift 22, reduce 43) on SEMI
state 51
	A : stmt . A  (8)
	A : .  (9)
	expr : .  (43)

	error  shift 14
	CHAR  shift 15
	SHORT  shift 16
	INT  shift 17
	FLOAT  shift 18
	LONG  shift 19
	DOUBLE  shift 20
	IDEN  shift 6
	ICON  shift 21
	SEMI  shift 22
	LC  shift 23
	LP  shift 24
	IF  shift 25
	WHILE  shift 26
	MINUS  shift 27
	RC  reduce 9

	NAME  goto 28
	stmt  goto 51
	A  goto 76
	Datatype  goto 31
	expr  goto 32
	logic  goto 33
	rel  goto 34
	relA  goto 35
	relB  goto 36
	bin  goto 37
	binterm  goto 38
	binfact  goto 39


state 52
	list : stmt A .  (7)

	.  reduce 7


state 53
	DecAs : error . ';'  (36)

	';'  shift 77
	.  error


state 54
	DecAs : NAME . EQUAL ICON  (31)
	DecAs : NAME . EQUAL MINUS ICON  (32)
	DecAs : NAME . EQUAL EQUAL ICON  (33)
	DecAs : NAME .  (34)
	DecAs : NAME . EQUAL  (35)

	EQUAL  shift 78
	error  reduce 34
	CHAR  reduce 34
	SHORT  reduce 34
	INT  reduce 34
	FLOAT  reduce 34
	LONG  reduce 34
	DOUBLE  reduce 34
	IDEN  reduce 34
	ICON  reduce 34
	SEMI  reduce 34
	LC  reduce 34
	RC  reduce 34
	LP  reduce 34
	COMMA  reduce 34
	IF  reduce 34
	ELSE  reduce 34
	WHILE  reduce 34
	MINUS  reduce 34


55: shift/reduce conflict (shift 79, reduce 17) on SEMI
state 55
	stmt : Datatype VList . SEMI  (10)
	stmt : Datatype VList .  (17)

	SEMI  shift 79
	error  reduce 17
	CHAR  reduce 17
	SHORT  reduce 17
	INT  reduce 17
	FLOAT  reduce 17
	LONG  reduce 17
	DOUBLE  reduce 17
	IDEN  reduce 17
	ICON  reduce 17
	LC  reduce 17
	RC  reduce 17
	LP  reduce 17
	IF  reduce 17
	ELSE  reduce 17
	WHILE  reduce 17
	MINUS  reduce 17


56: shift/reduce conflict (shift 80, reduce 39) on error
56: shift/reduce conflict (shift 6, reduce 39) on IDEN
state 56
	VList : DecAs . B  (30)
	B : .  (39)

	error  shift 80
	IDEN  shift 6
	COMMA  shift 81
	CHAR  reduce 39
	SHORT  reduce 39
	INT  reduce 39
	FLOAT  reduce 39
	LONG  reduce 39
	DOUBLE  reduce 39
	ICON  reduce 39
	SEMI  reduce 39
	LC  reduce 39
	RC  reduce 39
	LP  reduce 39
	IF  reduce 39
	ELSE  reduce 39
	WHILE  reduce 39
	MINUS  reduce 39

	NAME  goto 54
	DecAs  goto 82
	B  goto 83


state 57
	stmt : expr SEMI .  (16)

	.  reduce 16


state 58
	logic : logic OR . logic  (44)

	IDEN  shift 6
	ICON  shift 21
	LP  shift 24
	MINUS  shift 27
	.  error

	NAME  goto 43
	logic  goto 84
	rel  goto 34
	relA  goto 35
	relB  goto 36
	bin  goto 37
	binterm  goto 38
	binfact  goto 39


state 59
	logic : logic AND . logic  (45)

	IDEN  shift 6
	ICON  shift 21
	LP  shift 24
	MINUS  shift 27
	.  error

	NAME  goto 43
	logic  goto 85
	rel  goto 34
	relA  goto 35
	relB  goto 36
	bin  goto 37
	binterm  goto 38
	binfact  goto 39


state 60
	logic : logic OROR . logic  (46)

	IDEN  shift 6
	ICON  shift 21
	LP  shift 24
	MINUS  shift 27
	.  error

	NAME  goto 43
	logic  goto 86
	rel  goto 34
	relA  goto 35
	relB  goto 36
	bin  goto 37
	binterm  goto 38
	binfact  goto 39


state 61
	logic : logic ANDAND . logic  (47)

	IDEN  shift 6
	ICON  shift 21
	LP  shift 24
	MINUS  shift 27
	.  error

	NAME  goto 43
	logic  goto 87
	rel  goto 34
	relA  goto 35
	relB  goto 36
	bin  goto 37
	binterm  goto 38
	binfact  goto 39


state 62
	rel : relA RELOP . relB  (49)

	IDEN  shift 6
	ICON  shift 21
	LP  shift 24
	MINUS  shift 27
	.  error

	NAME  goto 43
	relB  goto 88
	bin  goto 89
	binterm  goto 38
	binfact  goto 39


state 63
	rel : relA EQUOP . relB  (50)

	IDEN  shift 6
	ICON  shift 21
	LP  shift 24
	MINUS  shift 27
	.  error

	NAME  goto 43
	relB  goto 90
	bin  goto 89
	binterm  goto 38
	binfact  goto 39


state 64
	bin : bin PLUS . binterm  (54)

	IDEN  shift 6
	ICON  shift 21
	LP  shift 24
	MINUS  shift 27
	.  error

	NAME  goto 43
	binterm  goto 91
	binfact  goto 39


state 65
	bin : bin MINUS . binterm  (55)

	IDEN  shift 6
	ICON  shift 21
	LP  shift 24
	MINUS  shift 27
	.  error

	NAME  goto 43
	binterm  goto 92
	binfact  goto 39


state 66
	binterm : binterm STAR . binfact  (57)

	IDEN  shift 6
	ICON  shift 21
	LP  shift 24
	MINUS  shift 27
	.  error

	NAME  goto 43
	binfact  goto 93


state 67
	binterm : binterm DIVOP . binfact  (58)

	IDEN  shift 6
	ICON  shift 21
	LP  shift 24
	MINUS  shift 27
	.  error

	NAME  goto 43
	binfact  goto 94


state 68
	st : rtype NAME RP LP LC list RC .  (2)

	.  reduce 2


state 69
	stmt : LC list RC .  (15)

	.  reduce 15


state 70
	binfact : LP bin RP .  (60)

	.  reduce 60


71: shift/reduce conflict (shift 22, reduce 43) on SEMI
state 71
	stmt : IF LP expr . RP stmt  (12)
	stmt : IF LP expr . RP stmt ELSE stmt  (13)
	stmt : IF LP expr . stmt  (19)
	stmt : IF LP expr . stmt  (21)
	expr : .  (43)

	error  shift 14
	CHAR  shift 15
	SHORT  shift 16
	INT  shift 17
	FLOAT  shift 18
	LONG  shift 19
	DOUBLE  shift 20
	IDEN  shift 6
	ICON  shift 21
	SEMI  shift 22
	LC  shift 23
	LP  shift 24
	RP  shift 95
	IF  shift 25
	WHILE  shift 26
	MINUS  shift 27

	NAME  goto 28
	stmt  goto 96
	Datatype  goto 31
	expr  goto 32
	logic  goto 33
	rel  goto 34
	relA  goto 35
	relB  goto 36
	bin  goto 37
	binterm  goto 38
	binfact  goto 39


72: shift/reduce conflict (shift 70, reduce 51) on RP
72: shift/reduce conflict (shift 65, reduce 51) on MINUS
state 72
	rel : bin .  (51)
	relB : bin .  (53)
	bin : bin . PLUS binterm  (54)
	bin : bin . MINUS binterm  (55)
	binfact : LP bin . RP  (60)

	RP  shift 70
	PLUS  shift 64
	MINUS  shift 65
	error  reduce 51
	CHAR  reduce 51
	SHORT  reduce 51
	INT  reduce 51
	FLOAT  reduce 51
	LONG  reduce 51
	DOUBLE  reduce 51
	IDEN  reduce 51
	ICON  reduce 51
	SEMI  reduce 51
	LC  reduce 51
	LP  reduce 51
	IF  reduce 51
	WHILE  reduce 51
	RELOP  reduce 53
	EQUOP  reduce 53
	OR  reduce 51
	AND  reduce 51
	OROR  reduce 51
	ANDAND  reduce 51


73: shift/reduce conflict (shift 22, reduce 43) on SEMI
state 73
	stmt : IF expr RP . stmt  (18)
	stmt : IF expr RP . stmt  (20)
	expr : .  (43)
